# tinycrm

./: .gitignore  LICENSE  README.md  Taskfile.yml  docker-compose.yml  pyproject.toml  tox.ini
.github/workflows/: ci.yaml
backend/: Dockerfile  app.py
frontend/: Dockerfile  app.py
